Add API backend foundation: AppDbContext, Identity, JWT, migrations

--- a/PlantTracker.Api/appsettings.json
+++ b/PlantTracker.Api/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=planttracker.db"
+  },
+  "JwtSettings": {
+    "Secret": "REPLACE_WITH_SECRET_IN_AZURE_APP_SETTINGS",
+    "Issuer": "PlantTracker.Api",
+    "Audience": "PlantTracker.App",
+    "ExpiryDays": 30
+  },
+  "PerenualApiKey": "REPLACE_WITH_KEY_IN_AZURE_APP_SETTINGS"
 }
