--- a/PlantTracker.Api/appsettings.json
+++ b/PlantTracker.Api/appsettings.json
@@ -2,7 +2,9 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Information",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Warning",
+      "Microsoft.EntityFrameworkCore.Migrations": "Information"
     }
   },
   "AllowedHosts": "*",
