--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -30,10 +30,14 @@ jobs:
       - name: Publish
         run: dotnet publish PlantTracker.Api/PlantTracker.Api.csproj --configuration Release --output ./publish --no-build
 
+      - name: Login to Azure
+        uses: azure/login@v2
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
       - name: Deploy to Azure App Service
         uses: azure/webapps-deploy@v3
         with:
           app-name: planttrackerapi
-          publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
           package: ./publish
 
