Fix app name in deployment workflow

--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -38,7 +38,5 @@ jobs:
       - name: Deploy to Azure App Service
         uses: azure/webapps-deploy@v3
         with:
-          app-name: planttrackerapi
+          app-name: planttrackerapi-d8haeza3dve2e0cz
           package: ./publish
-
-
